--- a/app/assets/stylesheets/components/_pageflip.scss
+++ b/app/assets/stylesheets/components/_pageflip.scss
@@ -1,7 +1,7 @@
 .pageflip-container {
   width: 100%;
   // height: 100%;
-  // margin: 0 auto;
+  margin: 0 auto;
   position: relative;
 }
 
@@ -14,4 +14,8 @@
   padding: 20px;
   height: 100%;
   box-sizing: border-box;
+}
+
+.pageflip-container {
+  font-size: 1.2rem !important;
 }
